src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>P7S1_Change</fullName>
        <description>Feature, Anforderung, Funktion</description>
        <isActive>true</isActive>
        <values>
            <fullName>Eskaliert</fullName>
        </values>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>In Warteschleife</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Wartet auf Dienstleister</fullName>
        </values>
        <values>
            <fullName>Wartet auf Feedback</fullName>
        </values>
        <values>
            <fullName>in Bearbeitung</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>P7S1_Incident</fullName>
        <description>Bug, Fehler, Störung</description>
        <isActive>true</isActive>
        <values>
            <fullName>Eskaliert</fullName>
        </values>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>In Warteschleife</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Wartet auf Dienstleister</fullName>
        </values>
        <values>
            <fullName>Wartet auf Feedback</fullName>
        </values>
        <values>
            <fullName>in Bearbeitung</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>P7S1_Kundenvorgangsstandardprozess</fullName>
        <description>Unterstützung der SF-Benutzer durch Solutions CRM (Fragen, Funktion, Problem)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Eskaliert</fullName>
        </values>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>In Warteschleife</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Wartet auf Dienstleister</fullName>
        </values>
        <values>
            <fullName>Wartet auf Feedback</fullName>
        </values>
        <values>
            <fullName>in Bearbeitung</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>P7S1_Problem</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Eskaliert</fullName>
        </values>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>In Warteschleife</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Wartet auf Dienstleister</fullName>
        </values>
        <values>
            <fullName>Wartet auf Feedback</fullName>
        </values>
        <values>
            <fullName>in Bearbeitung</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>P7S1_Service</fullName>
        <description>Betrieb, Aufgabe</description>
        <isActive>true</isActive>
        <values>
            <fullName>Eskaliert</fullName>
        </values>
        <values>
            <fullName>Geschlossen</fullName>
        </values>
        <values>
            <fullName>In Warteschleife</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Wartet auf Dienstleister</fullName>
        </values>
        <values>
            <fullName>Wartet auf Feedback</fullName>
        </values>
        <values>
            <fullName>in Bearbeitung</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Datum_F_lligkeit__c</fullName>
        <description>Bis wann soll das Ticket selber oder das nächste ToDo erledigt sein?</description>
        <inlineHelpText>Bis wann soll das Ticket selber oder das nächste ToDo erledigt sein?</inlineHelpText>
        <label>Datum Fälligkeit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funktionsphase__c</fullName>
        <description>Was ist die aktuelle Phase eines Tickets des Typs Funktion?</description>
        <inlineHelpText>Was ist die aktuelle Phase eines Tickets des Typs Funktion?</inlineHelpText>
        <label>Funktionsphase</label>
        <picklist>
            <picklistValues>
                <fullName>Idee wurde übertragen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anforderung finalisiert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aufwand geschätzt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>beauftragt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>geliefert / bereitgestellt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>getestet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>abgenommen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ausgerollt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Komponente__c</fullName>
        <description>Gruppierung des Tickets bezüglich Inhalt zu einem konkreten Themenbereich.</description>
        <inlineHelpText>Gruppierung des Tickets bezüglich Inhalt zu einem konkreten Themenbereich.</inlineHelpText>
        <label>Komponente</label>
        <picklist>
            <picklistValues>
                <fullName>Preis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produkt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bericht/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berechtigungen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechnungslauf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stammdaten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dokumentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prozesse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User/Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LCM_VersionName__c</fullName>
        <description>Name der Version des zugeordneten Requirements</description>
        <formula>Lcm_Requirement__r.Lcm_VersionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name der Version des zugeordneten Requirements</inlineHelpText>
        <label>Version-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_sung__c</fullName>
        <description>Wenn ein Ticket geschlossen wird, muss ein entsprechendes Outcome hinterlegt werden.</description>
        <inlineHelpText>Wenn ein Ticket geschlossen wird, muss ein entsprechendes Outcome hinterlegt werden.</inlineHelpText>
        <label>Lösung</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>behoben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nicht behoben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>funktioniert wie angefordert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kann nicht reproduziert werden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublette</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_Aceptancecriteria__c</fullName>
        <description>Akzeptanzkriterien, für die Abnahme der Userstory</description>
        <inlineHelpText>Akzeptanzkriterien, für die Abnahme der Userstory</inlineHelpText>
        <label>Akzeptanzkriterien</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseEffortActual__c</fullName>
        <description>(geschätzte) tatsächliche Stunden für die Umsetzung des Tickets</description>
        <inlineHelpText>(geschätzte) tatsächliche Stunden für die Umsetzung des Tickets</inlineHelpText>
        <label>Ist-Std.</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseEffortEstimated__c</fullName>
        <description>GROBE Aufwandsschätzung in Stunden für die Umsetzung des jeweiligen Tickets.</description>
        <inlineHelpText>GROBE Aufwandsschätzung in Stunden für die Umsetzung des jeweiligen Tickets.</inlineHelpText>
        <label>Aufwand Schätzung</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CaseEffortTarget__c</fullName>
        <description>Aufwandsschätzung in Stunden für die Umsetzung des jeweiligen Tickets (Schätzung).</description>
        <inlineHelpText>Aufwandsschätzung in Stunden für die Umsetzung des jeweiligen Tickets (Schätzung).</inlineHelpText>
        <label>Soll-Std.</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_Complexity__c</fullName>
        <description>Komplexität der Umsetzung in Storypoints</description>
        <inlineHelpText>Komplexität der Umsetzung in Storypoints</inlineHelpText>
        <label>Storypoints</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_DeploymentInstructions__c</fullName>
        <description>Instructions for PRE- or POST-Deployment steps.</description>
        <inlineHelpText>Instructions for PRE- or POST-Deployment steps.</inlineHelpText>
        <label>Deployment Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lcm_DevelopmentStatus__c</fullName>
        <description>The current state of the development.</description>
        <inlineHelpText>The current state of the development.</inlineHelpText>
        <label>Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to SharedDev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Prod</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lcm_KanColor__c</fullName>
        <formula>CASE( Projekt__c ,
&quot;7Games&quot; , &quot;#4C9900&quot; ,
&quot;7Screen&quot; , &quot;#4C9900&quot; ,
&quot;Adv Sonstiges&quot; , &quot;#99CCFF&quot; ,
&quot;Adv Betrieb&quot; , &quot;#FF4500&quot; ,
&quot;Adv Delta Force&quot; , &quot;#FF8C00&quot; ,
&quot;Adv Features&quot; , &quot;#99CCFF&quot; ,
&quot;Adv Modularisierung&quot; , &quot;#99CCFF&quot; ,
&quot;CRM-TV&quot; , &quot;#9ACD32&quot; ,
&quot;LCM&quot; , &quot;#D3D3D3&quot; ,
&quot;Liferay 2 SF&quot; , &quot;#4C9900&quot; ,
&quot;M&amp;A Integration&quot; , &quot;#FFCCCC&quot; ,
&quot;Prodia Ablöse Österreich&quot; , &quot;#9ACD32&quot; ,
&quot;Puls4&quot; , &quot;#9ACD32&quot; ,
&quot;Sales Excellence&quot; , &quot;#FFCCCC&quot; ,
&quot;SevenVentures GmbH&quot; , &quot;#FFB266&quot; ,
&quot;Studio71&quot; , &quot;#4C9900&quot; ,
&quot;#4C9900&quot;

)

/** ursprüngliche Farben

CASE( Projekt__c ,
&quot;ADcalibur Deutschland&quot;, &quot;#99CCFF&quot;,
&quot;Sales Excellence&quot;, &quot;#FFCCCC&quot;,
&quot;SevenVentures GmbH&quot;, &quot;#FFB266&quot;,
&quot;CRM-TV&quot;, &quot;#CCFFCC&quot;, 
&quot;#4C9900&quot;
)

**/

/** Farben laut Zuweisung für Dashboard

CASE( Projekt__c ,
&quot;7Games&quot; , &quot;#dddddd&quot; ,
&quot;7Screen&quot; , &quot;#dddddd&quot; ,
&quot;Adv Sonstiges&quot; , &quot;#bbbbbb&quot; ,
&quot;Adv Betrieb&quot; , &quot;#ff0000&quot; ,
&quot;Adv Delta Force&quot; , &quot;#ff6600&quot; ,
&quot;Adv Features&quot; , &quot;#009900&quot; ,
&quot;Adv Modularisierung&quot; , &quot;#33cc00&quot; ,
&quot;CRM-TV&quot; , &quot;#3333ff&quot; ,
&quot;LCM&quot; , &quot;#333333&quot; ,
&quot;Liferay 2 SF&quot; , &quot;#3333ff&quot; ,
&quot;M&amp;A Integration&quot; , &quot;#FFCCCC&quot; ,
&quot;Prodia Ablöse Österreich&quot; , &quot;#dddddd&quot; ,
&quot;Puls4&quot; , &quot;#3333ff&quot; ,
&quot;Sales Excellence&quot; , &quot;#FFCCCC&quot; ,
&quot;SevenVentures GmbH&quot; , &quot;#FFCCCC&quot; ,
&quot;Studio71&quot; , &quot;#dddddd&quot; ,
&quot;#4C9900&quot;
)

**/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kanban Farbe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_KanStation__c</fullName>
        <label>Kanban Station</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog_Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FuncSpec</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TechSpec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoLive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_KanStatus__c</fullName>
        <label>Kanban Status</label>
        <picklist>
            <picklistValues>
                <fullName>doing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_KanbanKombiSorted__c</fullName>
        <formula>CASE(Lcm_KanStation__c,
  &quot;FuncSpec&quot;, &quot;1&quot;,
  &quot;TechSpec&quot;, &quot;2&quot;,
  &quot;Dev&quot;, &quot;3&quot;,
  &quot;Test&quot;, &quot;4&quot;,
  &quot;GoLive&quot;, &quot;5&quot;,
  &quot;6&quot;
)
&amp; &quot;_&quot; &amp; CASE(Lcm_KanStatus__c,
  &quot;doing&quot;, &quot;1&quot;,
  &quot;done&quot;, &quot;2&quot;,
  &quot;3&quot;
)
&amp; &quot;_&quot; &amp; Lcm_KanbanKombi__c</formula>
        <label>Kanban Kombi (sortiert)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_KanbanKombi__c</fullName>
        <description>Kombination aus Kanban Station und Kanban Status, Hilfsfeld für Organisation (Bericht)</description>
        <formula>Text(Lcm_KanStation__c) &amp; &quot;_&quot; &amp; Text(Lcm_KanStatus__c)</formula>
        <inlineHelpText>Kombination aus Kanban Station und Kanban Status, Hilfsfeld für Organisation (Bericht)</inlineHelpText>
        <label>Kanban Kombi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_RankCombined__c</fullName>
        <formula>CASE(
  RecordType.DeveloperName,
  &quot;P7S1_Incident&quot;, &quot;1&quot;,
  &quot;P7S1_Service&quot;, &quot;2&quot;,
  &quot;P7S1_Change&quot;, &quot;3&quot;,
  &quot;4&quot;
) &amp;

&quot;_&quot; &amp;

LPAD(
  CASE(
    RecordType.DeveloperName,
    &quot;P7S1_Incident&quot;, TEXT(Severity__c),
    &quot;P7S1_Service&quot;, &quot;0&quot;,
    &quot;P7S1_Change&quot;, TEXT(1000-(Rank__c * 10)),
    &quot;0&quot;
  ),
  4, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank (kombiniert)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_RankOld__c</fullName>
        <description>Backup der Rankwerte, die bis zur automatischen Befüllung von Rank gepflegt wurden</description>
        <inlineHelpText>Backup der Rankwerte, die bis zur automatischen Befüllung von Rank gepflegt wurden</inlineHelpText>
        <label>Rank (Old)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Sprint, in dem Ticket umgesetzt werden soll</description>
        <inlineHelpText>Sprint, in dem Ticket umgesetzt werden soll</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>Lcm_Release__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementName__c</fullName>
        <formula>Lcm_Requirement__r.Lcm_RequirementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LCM Requirement, dass durch dieses TI beschrieben oder umgesetzt wird</description>
        <inlineHelpText>LCM Requirement, dass durch dieses TI beschrieben oder umgesetzt wird</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>Lcm_Requirement__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Kundenvorgaenge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_ReviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who reviewed the development.</description>
        <inlineHelpText>The user who reviewed the development.</inlineHelpText>
        <label>Reviewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReviewedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_Story__c</fullName>
        <description>Beschreibung der Anforderung in Form einer &quot;Story&quot; nach dem Muster:
Als NUTZER will ich FUNKTION oder EIGENSCHAFT, damit NUTZEN</description>
        <inlineHelpText>Beschreibung der Anforderung in Form einer &quot;Story&quot; nach dem Muster:
Als NUTZER will ich FUNKTION oder EIGENSCHAFT, damit NUTZEN</inlineHelpText>
        <label>User-Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lcm_Team__c</fullName>
        <description>Scrum-Teams, Projekt-Teams</description>
        <globalPicklist>Lcm_Team</globalPicklist>
        <inlineHelpText>Scrum-Teams, Projekt-Teams</inlineHelpText>
        <label>Team</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_TechnicalSpecification__c</fullName>
        <description>Notes or specifications which should be persisted before the actual development starts (e.g. in Refinements sessions).</description>
        <inlineHelpText>Notes or specifications which should be persisted before the actual development starts (e.g. in Refinements sessions).</inlineHelpText>
        <label>Technical Specification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lcm_TestDevErfolgreich__c</fullName>
        <description>Anzahl Tests erfolgreich oder obsolet der Developer</description>
        <inlineHelpText>Anzahl Tests erfolgreich oder obsolet der Developer</inlineHelpText>
        <label>Anzahl Dev erfolgreich/obsolet</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>erfolgreich, obsolet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>1 Developer</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestDevNichtErfolgreich__c</fullName>
        <description>Anzahl Tests nicht erfolgreich der Developer</description>
        <inlineHelpText>Anzahl Tests nicht erfolgreich der Developer</inlineHelpText>
        <label>Anzahl Dev nicht erfolgreich</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>1 Developer</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>nicht erfolgreich</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestDevOffen__c</fullName>
        <description>Anzahl Tests offen der Developer</description>
        <inlineHelpText>Anzahl Tests offen der Developer</inlineHelpText>
        <label>Anzahl Dev offen</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>offen</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>1 Developer</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestFbErfolgreich__c</fullName>
        <description>Anzahl Tests erfolgreich oder obsolet des Fachbereichs</description>
        <inlineHelpText>Anzahl Tests erfolgreich oder obsolet des Fachbereichs</inlineHelpText>
        <label>Anzahl Fb erfolgreich/obsolet</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>3 Fachbereich</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>erfolgreich, obsolet</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestFbNichtErfolgreich__c</fullName>
        <description>Anzahl Tests nicht erfolgreich des Fachbereichs</description>
        <inlineHelpText>Anzahl Tests nicht erfolgreich des Fachbereichs</inlineHelpText>
        <label>Anzahl Fb nicht erfolgreich</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>3 Fachbereich</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>nicht erfolgreich</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestFbOffen__c</fullName>
        <description>Anzahl Tests offen des Fachbereichs</description>
        <inlineHelpText>Anzahl Tests offen des Fachbereichs</inlineHelpText>
        <label>Anzahl Fb offen</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>3 Fachbereich</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>offen</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestReqErfolgreich__c</fullName>
        <description>Anzahl Tests erfolgreich oder obsolet der Requirementsmanager</description>
        <inlineHelpText>Anzahl Tests erfolgreich oder obsolet der Requirementsmanager</inlineHelpText>
        <label>Anzahl Req erfolgreich/obsolet</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>2 Requirementsmanager</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>erfolgreich, obsolet</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestReqNichtErfolgreich__c</fullName>
        <description>Anzahl Tests nicht erfolgreich der Requirementsmanager</description>
        <inlineHelpText>Anzahl Tests nicht erfolgreich der Requirementsmanager</inlineHelpText>
        <label>Anzahl Req nicht erfolgreich</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>2 Requirementsmanager</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>nicht erfolgreich</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestReqOffen__c</fullName>
        <description>Anzahl Tests offen der Requirementsmanager</description>
        <inlineHelpText>Anzahl Tests offen der Requirementsmanager</inlineHelpText>
        <label>Anzahl Req offen</label>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestRolle__c</field>
            <operation>equals</operation>
            <value>2 Requirementsmanager</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Lcm_CaseTest__c.Lcm_TestErgebnis__c</field>
            <operation>equals</operation>
            <value>offen</value>
        </summaryFilterItems>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_TestResult__c</fullName>
        <description>Gesamtergebnis, ob Ticket-Tests offen, erfolgreich oder nicht erfolgreich sind</description>
        <formula>IF(Lcm_TestTotal__c = 0,
  &quot;offen&quot;,
  IF(Lcm_TestReqNichtErfolgreich__c + Lcm_TestDevNichtErfolgreich__c + Lcm_TestFbNichtErfolgreich__c &gt; 0,
    &quot;nicht erfolgreich&quot;,
    IF(Lcm_TestDevOffen__c + Lcm_TestFbOffen__c + Lcm_TestReqOffen__c &gt; 0,
      &quot;offen&quot;,
      &quot;erfolgreich&quot;
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gesamtergebnis, ob Ticket-Tests offen, erfolgreich oder nicht erfolgreich sind</inlineHelpText>
        <label>Test-Ergebnis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>Lcm_TestSphere</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestTotal__c</fullName>
        <description>Anzahl aller Ticket-Tests (Dev, Req, Fb)</description>
        <inlineHelpText>Anzahl aller Ticket-Tests (Dev, Req, Fb)</inlineHelpText>
        <label>Anzahl Tests</label>
        <summaryForeignKey>Lcm_CaseTest__c.Lcm_TestTicketNr__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_BenoetigteKomponenten__c</fullName>
        <description>Alle für die Umsetzung notwendigen Komponenten</description>
        <inlineHelpText>Alle für die Umsetzung notwendigen Komponenten</inlineHelpText>
        <label>Benötigte Komponenten</label>
        <picklist>
            <picklistValues>
                <fullName>Objekt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datensatztyp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bericht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validierungsregel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genehmigungsprozess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berechtigung</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>P7S1_BusinessValue__c</fullName>
        <description>Abschätzung des Business Value durch den Fachbereich</description>
        <inlineHelpText>Abschätzung des Business Value durch den Fachbereich</inlineHelpText>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_CaseInAktuellemRelease__c</fullName>
        <formula>Lcm_Release__r.Lcm_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket im aktuellem Sprint</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>